micronfig_macros/tests/sources/wrong_nonsense_2.stderr
error: expected identifier
 --> tests/sources/wrong_nonsense_2.rs:2:2
  |
2 |     : ->
  |     ^
